Sun Nov  3 13:03:29 2002  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkfilesel.c configure.in: Remove check for
	winsock.h since it might show up on Linux+Wine.
	Instead just conditionalize of G_OS_WIN32.
	(#97396, Gaute Lindkvist)

Sun Nov  3 01:39:20 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodel.c (release_row_references): took out the useless
	check for refs->list (#97353, reported by Morten Welinder).

	* gtk/gtkcellrendererpixbuf.c (gtk_cell_renderer_pixbuf_get_size):
	check if width isn't zero instead of calc_width ...

Sat Nov  2 23:48:52 2002  Kristian Rietveld  <kris@gtk.org>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_set_model): remove
	the second ref command on the child_model, we only have to ref it
	once here. (#96851, reported by Jorn Baayen).

2002-11-02  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkhandlebox.c (effective_handle_position): 
	(gtk_handle_box_size_request): 
	(gtk_handle_box_size_allocate): 
	(gtk_handle_box_draw_ghost): 
	(gtk_handle_box_paint): 
	(gtk_handle_box_button_changed): 
	(gtk_handle_box_motion): 
	Flip handleboxes for RTL locales.  (#96629)

Sat Nov  2 13:47:09 2002  Owen Taylor  <otaylor@redhat.com>
	 
	* === Released 2.1.2 ===

	* NEWS: Update.

Sat Nov  2 00:22:33 2002  Owen Taylor  <otaylor@redhat.com>

	Add startup notification hooks - mostly based on patch
	by Havoc Pennington in #96772.
	
	* gdk/gdk.h gdk/x11/gdkdisplay-x11.c 
	gdk/{win32,linux-fb}/gdkmain-*.c: (gdk_notify_startup_complete):
	new function that indicates an application has finished starting
	up.
	
	* gdk/x11/gdkmain-x11.c gdk/x11/gdkdisplay-x11.c
	(_gdk_windowing_set_default_display): store value of 
	DESKTOP_STARTUP_ID on the default screen, and clear it from the 
	environment.
	
	* gdk/x11/gdkdisplay-x11.c: 
	Set _NET_STARTUP_ID hint on display's group leader window.
	
	* gtk/gtkwindow.c (gtk_window_set_auto_startup_notification):
	function to toggle whether we automatically broadcast that we've